--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,7 +22,7 @@
         </li>
 
         <li class="nav-item nav-icon">
-          <a href="">
+          <a href="{% url 'logout' %}">
             <i class="fas fa-sign-out-alt"></i>
           </a>
         </li>
