--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="main-navbar">
   <div class="container">
 
-    <a class="navbar-brand pr-5" style="border-right: 1px solid #efefef;" href="">
+    <a class="navbar-brand pr-5" style="border-right: 1px solid #efefef;" href="{% url 'feed' %}">
       <img src="{% static 'img/instagram.png' %}" height="45" class="d-inline-block align-top"/>
     </a>
 
@@ -11,12 +11,16 @@
 
         <li class="nav-item">
           <a href="">
-            <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
+            {% if request.user.profile.picture %}
+            <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
+            {% else %}
+              <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
+            {% endif %}
           </a>
         </li>
 
         <li class="nav-item nav-icon">
-          <a href="">
+          <a href="{% url 'create_post' %}">
             <i class="fas fa-plus"></i>
           </a>
         </li>
